# libcpcs

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
include/cpcs/: cpcs_runtime.h  internal.h
src/: CMakeLists.txt  cls.c  context.c  init.c  utils.c
tests/: CMakeLists.txt  test_context.c  test_utils.c
